deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yugioh-market
  labels:
    name: yugioh-market
    app: tcg-marketplace
